# distributed-snp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
benchmark/: README.md  SortBenchmark.cpp  benchmark_visualization.ipynb  sort_benchmark.prompt.md
benchmark_results/: benchmark_20251213_022242.json
docs/: DISTRIBUTED_TESTING.md  cuda.md  cuda_mpi.md  cuda_mpi_snp.prompt.md  cuda_snp.prompt.md  naive_cuda_mpi.md  notes.md  overview.md  sample.md  snp.prompt.md  snp_example.tex  snp_explanation.md  snp_explanation.tex  snp_prompt.md  todo.md
docs/prompts/: cuda_mpi_snp_improvement.prompt.md  cuda_snp.prompt.md  naive_cuda_mpi_snp.prompt.md  snp_explanation.tex  sparse_cuda_snp_sort.prompt.md  visualize.prompt.md
docs/sparse_snp/: sparse_snp_model.cu  sparse_snp_paper.tex
scripts/: benchmark_and_visualize.sh  compare_benchmarks.py  deploy_tests.sh  run_benchmark.sh  run_distributed_benchmark.sh  run_distributed_tests.sh  visualize_benchmarks.py
src/: main.cpp
src/linear_algebra/: CpuMatrixOps.cpp  CudaMatrixOps.cu  KernelMatrixOps.cuh  MatrixOps.h  MpiCudaMatrixOps.cu
src/snp/: CpuSnpSimulator.cpp  CudaMpiSnpSimulator.cu  CudaSnpSimulator.cu  IPartitioner.hpp  ISnpSimulator.hpp  LinearPartitioner.hpp  LouvainPartitioner.cpp  LouvainPartitioner.hpp  NaiveCpuSnpSimulator.cpp  NaiveCudaMpiSnpSimulator.cu  NaiveSnpSimulator.cu  RedBluePartitioner.hpp  SnpSimulator.cpp  SnpSimulator.cu  SnpSimulator.h  SnpSystemConfig.hpp  SnpSystemPermuter.hpp  SparseCudaSnpSimulator.cu
src/sort/: ISort.hpp  SnpSort.cpp
tests/linear_algebra/: MatrixOps.cpp
tests/snp/: PartitionerTest.cpp  SnpSimulator.cpp
tests/sort/: SnpSort.cpp
